--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -81,6 +81,39 @@
   width: 180px;
   border: none;
   background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.YtVideoDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  z-index: 10000;
+  background: #0000003b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+}
+.YtVideoDiv_closeIcon {
+  color: #fff;
+  position: absolute;
+  top: 50px;
+  right: 5%;
+  font-size: 37px !important;
+  background: #000000b5;
+  border-radius: 50px;
+  z-index: 2;
+  cursor: pointer;
+  padding: 7px;
+}
+.home_div_section1_area_1_div2_btn_icon {
+  border: solid 1px grey;
+  margin-right: 5px;
+  border-radius: 50%;
 }
 .home_div_section1_area_1_div2_btn2 {
   padding: 15px;
