--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -10,6 +10,23 @@
   padding: 1em 0em;
   border-bottom: solid 1px #3cd19a54;
 }
+.header_social_links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0em;
+}
+.header_social_links .footerDiv1_area1_cont2_links_link_tel {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 0px;
+  /* background: #ff562330; */
+  padding: 0px;
+  border-radius: 19px;
+  /* border: solid 1px #ff5623; */
+  width: 40px;
+}
 .header_div_relative {
   width: 100%;
   background: #0000001c;
