--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -42,10 +42,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 100px;
+  font-size: 120px;
   font-weight: 700;
   margin-bottom: 20px;
-  line-height: 1.1;
+  line-height: 1;
   color: #3cd199;
   /* text-transform: uppercase; */
   text-align: center;
@@ -63,6 +63,7 @@
   text-align: center;
   color: #fff;
   width: 90%;
+  line-height: 1.5;
 }
 .home_div_section1_area_1_div2 {
   width: 100%;
@@ -782,7 +783,7 @@ p {
     padding-bottom: 0em;
   }
   .home_div_section1_area_1_div1_txt1 {
-    font-size: 72px;
+    font-size: 90px;
   }
   .home_div_section1_area_1_div1_txt2 {
     width: 100%;
@@ -898,12 +899,17 @@ p {
     justify-content: flex-start;
     gap: 60px 30px;
   }
-
+  .home_div_section1_area_1_div1_txt1_span {
+    margin-right: 10px;
+  }
   .home_div_section1_area_1_div1_txt1 {
-    font-size: 38px;
+    font-size: 52px;
     width: 100%;
     text-align: left;
     align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
   }
   .home_div_section1_area_1_div1_txt2 {
     font-size: 16px;
@@ -1093,6 +1099,6 @@ p {
 }
 @media (max-width: 600px) {
   .home_div_section1_area_1_div1_txt1 {
-    font-size: 34px;
+    font-size: 38px;
   }
 }
