--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -3,7 +3,7 @@
   z-index: 100;
   width: 100%;
   background: linear-gradient(267deg, black, #0f584e);
-  color: #000;
+  color: #ffffff;
   backdrop-filter: blur(20px);
   top: 0;
   left: 0;
