--- a/src/Components/Home/egc.css
+++ b/src/Components/Home/egc.css
@@ -21,6 +21,14 @@
   font-weight: 300;
   color: #d6ece5;
 }
+.home_div_section4_area_tile_para {
+  font-size: 24px;
+  font-weight: 400;
+  color: #cdddddbf;
+  margin-top: 1em;
+  width: 50%;
+  line-height: 1.3;
+}
 .egox_token_div_section1area_cont2 {
   width: -webkit-fill-available;
   display: flex;
@@ -237,6 +245,15 @@
   font-size: 68px;
   font-weight: 700;
   text-align: center;
+  align-items: center;
+}
+.egox_token_div_section3_area_para {
+  font-size: 24px;
+  font-weight: 400;
+  color: #cdddddbf;
+  margin-top: 1em;
+  width: 80%;
+  line-height: 1.3;
 }
 .egox_token_div_section3_area_title_para {
   color: #abd0c1;
