--- a/src/Components/EventComp/event.css
+++ b/src/Components/EventComp/event.css
@@ -57,7 +57,7 @@
   padding-bottom: 1.75em;
   padding-left: 2em;
   padding-right: 2em;
-  margin-top: 3em;
+  margin-top: 5em;
 }
 .eventHome_div_section1_image_txt_txt {
   --tw-text-opacity: 1;
@@ -90,8 +90,8 @@
 .eventHome_div_section2 {
   color: #fff;
   margin-top: 2em;
-  border-bottom: solid 1px #606463;
-  padding-bottom: 2em;
+  /* border-bottom: solid 1px #606463; */
+  padding-bottom: 1em;
 }
 
 .eventHome_div_section2_area {
@@ -189,7 +189,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(89deg, #184e3c, #0a2115e6, transparent);
+  background: linear-gradient(89deg, #000000, #000000e6, transparent);
   z-index: 1;
 }
 .eventHome_div_section3_area_cont1_img {
