--- a/src/Components/EventComp/eventlanding.css
+++ b/src/Components/EventComp/eventlanding.css
@@ -80,7 +80,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #00000069;
+  background: #000000a8;
   width: 100vw;
   height: 100dvh;
   z-index: 10000;
@@ -88,18 +88,39 @@
   align-items: center;
   justify-content: center;
   padding: 1em;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+  flex-direction: column;
 }
+
+.eventModal_close_icon {
+  color: #ffff;
+  margin-bottom: 1em;
+  border: solid 1px;
+  padding: 4px;
+  border-radius: 50px;
+  cursor: pointer;
+  /* position: absolute; */
+  /* right: 8%; */
+  /* top: 6%; */
+  font-size: 24px;
+}
+
 .eventModal_cont {
-  width: 100%;
+  width: -webkit-fill-available;
   max-width: 450px;
-  background: #fff;
+  /* background: #fff; */
   padding: 2em;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background: #0c3822db;
+  /* padding: 2em; */
+  border-radius: 10px;
+  position: relative;
+  color: #fff;
+  border: solid 1px #ffffff57;
 }
 .eventModal_cont_title {
   width: 100%;
@@ -114,15 +135,35 @@
   margin-top: 1em;
   margin-bottom: 10px;
 }
+.eventModal_cont_input_div_span {
+  display: flex;
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #97c3ad;
+}
 .eventModal_cont_input {
   width: -webkit-fill-available;
   padding: 15px;
   border-radius: 7px;
-  border: solid 1px grey;
+  border: solid 1px #60a382cf;
   font-size: 18px;
+  background: #0f1814;
+  color: #ffff;
 }
 .eventModal_cont_last_para {
   width: 100%;
   font-size: 14px;
   margin-top: 2em;
+  color: #b2d7c4;
+}
+.eventModal_cont_btn {
+  background: #22ad62;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  width: 100%;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 1em;
 }
