--- a/src/Components/EventComp/eventlanding.css
+++ b/src/Components/EventComp/eventlanding.css
@@ -169,3 +169,15 @@
   font-size: 18px;
   margin-top: 1em;
 }
+
+@media (max-width: 999px) {
+  .EventLandingPage_div_area {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
