--- a/src/Components/EventComp/event.css
+++ b/src/Components/EventComp/event.css
@@ -487,3 +487,57 @@
     justify-content: center;
   }
 }
+
+@media (max-width: 750px) {
+  .eventHome_div_section1_cont {
+    flex-direction: column;
+  }
+  .eventHome_div_section1_cont_img {
+    width: 100%;
+  }
+  .event_div_area_body {
+    padding: 2em 1em;
+  }
+  .eventHome_div_section1_image_txt_txt {
+    font-size: 38px;
+  }
+
+  .eventHome_div_section3_area_cont1 {
+    margin: 0em 0em;
+    width: -webkit-fill-available;
+    margin-bottom: 1em;
+  }
+  .eventHome_div_section3_area {
+    flex-direction: column;
+  }
+  .eventHome_div_section1_image_txt_para {
+    font-size: 18px;
+    width: 100%;
+  }
+  .vertical_rule {
+    display: none;
+  }
+  .eventHome_div_section2_area {
+    display: grid;
+    width: -webkit-fill-available;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    justify-content: flex-start;
+    gap: 10px;
+  }
+  .eventHome_div_section2_area_cont1 {
+    width: -webkit-fill-available;
+  }
+  .eventHome_div_section2_area_cont1_sub_div {
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+  }
+  .eventHome_div_section2_area_cont1_heading {
+    margin-bottom: 1em;
+    font-size: 14px;
+  }
+  .eventHome_div_section2_area_cont1_sub_div_span {
+    font-size: 14px;
+  }
+}
