--- a/src/Components/EventComp/event.css
+++ b/src/Components/EventComp/event.css
@@ -419,7 +419,7 @@
     font-size: 14px;
     width: 100%;
   }
-  .home_div_section1_area_1_div2_btn {
+  .eventHome_div_section3_area_cont1 .home_div_section1_area_1_div2_btn {
     width: 150px;
     font-size: 14px;
   }
