--- a/src/Components/EventComp/Referral/dashboardMember.css
+++ b/src/Components/EventComp/Referral/dashboardMember.css
@@ -194,3 +194,14 @@ svg.rc-progress-line {
     align-items: flex-start;
   }
 }
+@media screen and (max-width: 767px) {
+  .welcome_bonus_div {
+    align-items: flex-start !important;
+  }
+  .dash_member_sub_div_1_txt_conts_2 {
+    font-size: 42px;
+  }
+  .dash_member_sub_div_1_head1 {
+    font-size: 20px;
+  }
+}
