--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -10,7 +10,7 @@
   padding: 1em 0em;
   border-bottom: solid 1px #3cd19a54;
 }
-button.Airdrop_head_btn {
+.Airdrop_head_btn {
   margin-left: 2em;
   padding: 15px 10px;
   width: 150px;
