--- a/src/App.css
+++ b/src/App.css
@@ -320,3 +320,11 @@ input[type="checkbox"]:checked + .checkBox_agree_div_body_label:before {
 /* =================== */
 /* =================== */
 /* =================== */
+
+.grains_ellipse {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0.2;
+}
