--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -272,7 +272,7 @@
     display: none;
   }
   .Airdrop_head_btn_mobile {
-    margin-bottom: 5em;
+    margin-bottom: 3em;
     padding: 15px 10px;
     width: 100%;
     border-radius: 50px;
@@ -282,6 +282,7 @@
     border: none;
     color: #000;
     display: block;
+    margin-top: 2em;
   }
   .header_div_area_2_div {
     display: none;
@@ -330,17 +331,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    background: linear-gradient(178deg, #2f4d4bb5, #344948b3);
+    background: #000;
     backdrop-filter: blur(3px);
   }
   .headerMenuDiv_cont_body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: 100%;
     margin-top: 1em;
     overflow: auto;
+    color: #fff;
+    padding-top: 1em;
   }
   .headerMenuDiv_cont_body_link1 {
     width: 100%;
@@ -350,6 +352,8 @@
     padding: 1em 0em;
     color: #fff;
     font-size: 20px;
+    border-bottom: solid 1px #393939;
+    margin-bottom: 1em;
   }
   .headerMenuDiv_cont_1_icon {
     /* display: block !important; */
